--- a/form.html
+++ b/form.html
@@ -30,7 +30,7 @@
       }
 
       try {
-        const response = await fetch('https://https://fon-payments.onrender.com/create-payment', {
+        const response = await fetch('https://fon-payments.onrender.com/create-payment', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ name, email, amountPLN: amount })
